--- a/project03p2/views/list.erb
+++ b/project03p2/views/list.erb
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Rolling Stone's Top 100 Albums of All Time</h1>
-	<p>Sorted by <%= @order.capitalize%></p>
+	<p>Sorted by <%= @sort_order.capitalize%></p>
 	<table>
 	<% @albums.each do |album| %>
 		<%= album.rank == @rank_to_highlight ? "<tr class=\"highlighted\">" : "<tr>" %>
