finalize css page, end of chapter 6

--- a/project04/app/assets/stylesheets/products.css.scss
+++ b/project04/app/assets/stylesheets/products.css.scss
@@ -40,10 +40,10 @@
 	}
 	
 	.list_line_even {
-		background: #e0f8f8;
+		background-color: #e0f8f8;
 	}
 	
 	.list_line_odd {
-		bacground: #f8b0f8;
+		background-color: #f8b0f8;
 	}
 }
