--- a/project04/app/views/layouts/application.html.erb
+++ b/project04/app/views/layouts/application.html.erb
@@ -20,8 +20,9 @@
 				<li><a href="http://www.../contact">Contact</a></li>
 			</ul>
 		</div>
-	<div id="main">
-		<%= yield %>
+		<div id="main">
+			<%= yield %>
+		</div>
 	</div>
 </body>
 </html>
